--- a/app/views/families/new.html.haml
+++ b/app/views/families/new.html.haml
@@ -1,7 +1,7 @@
 .span6
   .well
     %h2.lead{align: "center"}
-      Create Family
+      Create / Join Family
     =render 'form'
   %p
     = link_to 'Back', :back, class: "btn btn-small"
