--- a/app/views/purchases/destroy.js.erb
+++ b/app/views/purchases/destroy.js.erb
@@ -1,2 +1,2 @@
 $("#purchase-<%= @purchase.id %>").fadeOut("fast");
-$("#credits").html('<div class="lead" id="credits"><%= @credits %> credits</div>');
+$("#user-<%= @user.id %>").html('<%= @credits %>');
