--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -13,7 +13,7 @@
     = link_to " Item", new_item_path, class: "i icon-plus btn"
     %p
   .lead Credits
-  %div.well.well-small
+  %div.well.well-small#credits
     -if current_user.user_type < 10
       .lead
         =current_user.credits
