--- a/app/views/meals/index.html.haml
+++ b/app/views/meals/index.html.haml
@@ -1,13 +1,39 @@
-.span8
+:javascript
+  function assignMeal(id){
+    $.ajax({
+      url: "#{assign_meal_path}",
+      type: "GET",
+      data: {menu_day: $('#select-' + id + ' option:selected').text(), id: id},
+    })
+  };
+
+.span7
+  .lead{align: "center"} Menu
+  %table.table.table-bordered{width: "100%"}
+    %col{width: "50%"}
+    %col{width: "50%"}
+    -count = 1
+    -while count < 8
+      %tr{height: "100px"}
+        %td{id: "day-#{count}"}
+          -if @meals.select{|x| x.menu_day == count}.first
+            = render partial: 'menu_entry', locals: {meal: @meals.select{|x| x.menu_day == count}.first}
+          -else
+            =count
+        %td{id: "day-#{count + 7}"}
+          -if @meals.select{|x| x.menu_day == count + 7}.first
+            = render partial: 'menu_entry', locals: {meal: @meals.select{|x| x.menu_day == count + 7}.first}
+          -else
+            =count + 7
+      -count = count + 1
+.span3
   .lead{align: "center"} Recipe Box
+  = link_to ' Meal', new_meal_path, class: "i icon-plus btn"
   %table.table
     %col{:width => "60%"}
     %col{:width => "40%"}
     - @meals.each do |meal|
       %tr
-        %td= link_to meal.name, meal
-        %td{align: "center"}
-          = link_to ' Edit', edit_meal_path(meal), class: "i icon-edit btn btn-small"
-          = link_to ' Delete', meal, confirm: 'Are you sure?', method: :delete, class: "i icon-trash btn btn-small"
-.span2
-  = link_to ' Meal', new_meal_path, class: "i icon-plus btn"
+        %td
+          = link_to meal.name, meal
+          =select_tag "select-#{meal.id}", options_for_select(["",1,2,3,4,5,6,7,8,9,10,11,12,13,14], (meal.menu_day? ? meal.menu_day : "")), onchange: "assignMeal(#{meal.id});" ,class: "input-mini pull-right"
