--- a/app/views/purchases/index.html.haml
+++ b/app/views/purchases/index.html.haml
@@ -6,7 +6,7 @@
     %li.active
       %a{:href => "#"} Purchases
   %table.table
-    -@purchases.each do |purchase|
+    -@purchases.sort_by{|x| x.created_at}.reverse.each do |purchase|
       %tr{id: "purchase-#{purchase.id}"}
         %td
           .span2= purchase.item.name
@@ -32,4 +32,4 @@
         -children.each do |member|
           %tr
             %td=member.name
-            %td=member.credits
+            %td{id: "user-#{member.id}"}=member.credits
